--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@types/qs": "^6.14.0",
     "axios": "^1.10.0",
+    "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "qs": "^6.14.0",
     "react": "^19.0.0",
