--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tabler/icons-react": "^3.34.1",
     "@types/qs": "^6.14.0",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "motion": "^12.23.9",
     "next": "15.3.5",
     "qs": "^6.14.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
+    "react-social-icons": "^6.24.0",
     "swiper": "^11.2.10",
+    "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5"
   },
   "devDependencies": {
