--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "@types/qs": "^6.14.0",
     "axios": "^1.10.0",
     "clsx": "^2.1.1",
+    "cobe": "^0.6.4",
     "lucide-react": "^0.525.0",
-    "motion": "^12.23.9",
+    "motion": "^12.23.12",
     "next": "15.3.5",
     "qs": "^6.14.0",
     "react": "^19.0.0",
+    "react-countup": "^6.5.3",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-markdown": "^10.1.0",
     "react-social-icons": "^6.24.0",
+    "simplex-noise": "^4.0.3",
     "swiper": "^11.2.10",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5"
